Move AppVeyor artifact publishing to on_finish to ensure it runs on failed builds too (#1414)

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,11 +10,9 @@ branches:
     - /^rel\/.*/
 build_script:
   - ps: .\run.ps1 default-build
+on_finish:
   - ps: "7z a testlogs.zip testlogs"
-artifacts:
-  - path: testlogs.zip
-    name: TestLogs
-    type: Zip
+  - ps: "Push-AppveyorArtifact testlogs.zip"
 install:
   - ps: Install-Product node 8
 clone_depth: 1
