Ensure publish directory is cleaned when /t:Clean is executed [ci skip]

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -3,4 +3,8 @@
 
   <Import Project="..\Directory.Build.targets" />
   <Import Project="PackGlobalTool.targets" />
+
+  <Target Name="CleanPublishDir" AfterTargets="CoreClean">
+    <RemoveDir Directories="$(PublishDir)" />
+  </Target>
 </Project>
