Include the buildMultiTargeting folder in the Sdk package

--- a/src/Microsoft.NET.Sdk.Razor/Microsoft.NET.Sdk.Razor.csproj
+++ b/src/Microsoft.NET.Sdk.Razor/Microsoft.NET.Sdk.Razor.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <None Include="Sdk\*" Pack="true" PackagePath="Sdk\" />
     <None Include="build\**\*" Pack="true" PackagePath="build" />
+    <None Include="buildMultiTargeting\**\*" Pack="true" PackagePath="buildMultiTargeting" />
   </ItemGroup>
 
 </Project>
