--- a/nuget/AspNetCore.nuspec
+++ b/nuget/AspNetCore.nuspec
@@ -6,10 +6,10 @@
     <version>$VERSION$</version>
     <authors>Microsoft</authors>
     <owners>Microsoft</owners>
-    <licenseUrl>http://www.microsoft.com/web/webpi/eula/net_library_eula_ENU.htm</licenseUrl>
+    <licenseUrl>https://www.microsoft.com/web/webpi/eula/net_library_eula_ENU.htm</licenseUrl>
     <copyright>© .NET Foundation. All rights reserved.</copyright>
-    <projectUrl>http://www.asp.net/</projectUrl>
-    <iconUrl>http://go.microsoft.com/fwlink/?LinkID=288859</iconUrl>
+    <projectUrl>https://www.asp.net/</projectUrl>
+    <iconUrl>https://go.microsoft.com/fwlink/?LinkID=288859</iconUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>ASP.NET Core Module</description>
     <language>en-US</language>
