--- a/test/testapps/Directory.Build.props
+++ b/test/testapps/Directory.Build.props
@@ -4,6 +4,9 @@
   <PropertyGroup>
     <SolutionRoot Condition="'$(SolutionRoot)' == ''">$(MSBuildThisFileDirectory)..\..\</SolutionRoot>
     <SolutionRoot>$([MSBuild]::EnsureTrailingSlash('$(SolutionRoot)'))</SolutionRoot>
+
+    <!-- Temporary hack to make things compatible with the 2.1.300-preview2-008173 Sdk -->
+    <_RazorSdkPackageReferenced>true</_RazorSdkPackageReferenced>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(BinariesRoot)'==''">
