Add MVC Razor msbuild files

--- a/test/WebSites/RazorBuildWebSite/RazorBuildWebSite.csproj
+++ b/test/WebSites/RazorBuildWebSite/RazorBuildWebSite.csproj
@@ -22,6 +22,7 @@
       Just do `dotnet build /t:RazorGenerate /p:TargetFramework=netcoreapp2.0` and look in obj/Debug/netcoreapp2.0/Razor
       -->
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="$(MicrosoftAspNetCoreRazorDesignPackageVersion)" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.Extensions" Version="$(MicrosoftAspNetCoreMvcRazorExtensionsPackageVersion)" />
   </ItemGroup>
 
 </Project>
