Update MsgPack-Cli version
* Fixes #1301
* Fixes #1058
* Fixes #1422

--- a/client-ts/tsconfig-base.json
+++ b/client-ts/tsconfig-base.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "module": "es2015",
         "target": "es2016",
+        "outDir": "./obj/js",
         "sourceMap": true,
         "moduleResolution": "node",
         "inlineSources": true,
