Make it possible to run the Browser Functional Tests from the command line (#1448)

--- a/client-ts/FunctionalTests/package.json
+++ b/client-ts/FunctionalTests/package.json
@@ -6,14 +6,25 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "es6-promise": "^4.2.2"
+    "@types/selenium-webdriver": "^3.0.8",
+    "@types/yargs": "^11.0.0",
+    "es6-promise": "^4.2.2",
+    "faucet": "0.0.1",
+    "selenium-webdriver": "^4.0.0-alpha.1",
+    "tap-mocha-reporter": "^3.0.6",
+    "tree-kill": "^1.2.0",
+    "ts-node": "^4.1.0",
+    "webdriver-manager": "^12.0.6",
+    "yargs": "^11.0.0"
   },
   "scripts": {
-    "clean": "node ../node_modules/rimraf/bin.js ./wwwroot/dist",
-    "build": "npm run build:lint && npm run build:tsc && npm run build:rollup",
+    "clean": "node ../node_modules/rimraf/bin.js ./wwwroot/dist ./obj/js",
+    "build": "npm run clean && npm run build:lint && npm run build:tsc && npm run build:rollup",
     "build:lint": "node ../node_modules/tslint/bin/tslint -c ../tslint.json -p ./tsconfig.json",
     "build:tsc": "node ../node_modules/typescript/bin/tsc --project ./tsconfig.json",
-    "build:rollup": "node ../node_modules/rollup/bin/rollup -c"
+    "build:rollup": "node ../node_modules/rollup/bin/rollup -c",
+    "rawtest": "ts-node --project ./run-tests.tsconfig.json ./run-tests.ts --browser chrome -h",
+    "test": "npm run rawtest | faucet"
   },
   "author": "",
   "license": "Apache-2.0"
