--- a/version.props
+++ b/version.props
@@ -8,6 +8,7 @@
     <VsixVersion Condition="'$(BuildNumber)' != ''">$(VsixVersion).$(BuildNumber)</VsixVersion>
     <VsixVersion Condition="'$(BuildNumber)' == ''">$(VsixVersion).999999</VsixVersion>
     <BuildNumber Condition="'$(BuildNumber)' == ''">t000</BuildNumber>
+    <VersionSuffix Condition="'$(VersionSuffix)' != '' And '$(FeatureBranchVersionSuffix)' != ''">$(VersionSuffix)-$([System.Text.RegularExpressions.Regex]::Replace('$(FeatureBranchVersionSuffix)', '[^\w-]', '-'))</VersionSuffix>
     <VersionSuffix Condition="'$(VersionSuffix)' != '' And '$(BuildNumber)' != ''">$(VersionSuffix)-$(BuildNumber)</VersionSuffix>
   </PropertyGroup>
 </Project>
