--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ x64/
 src/AspNetCore/aspnetcore_msg.h
 src/AspNetCore/aspnetcore_msg.rc
 src/AspNetCore/version.h
+src/RequestHandler/version.h
 src/CommonLib/aspnetcore_msg.h
 src/CommonLib/aspnetcore_msg.rc
 .build
