Remove Microsoft.NETCore.Platforms from tool package nuspec

--- a/src/PackGlobalTool.targets
+++ b/src/PackGlobalTool.targets
@@ -12,7 +12,7 @@
         description=$(Description);
         repositoryUrl=$(RepositoryUrl);
         targetframework=$(TargetFramework);
-        MicrosoftNETCorePlatformsPackageVersion=$(MicrosoftNETCorePlatformsPackageVersion);
+        repositoryCommit=$(RepositoryCommit);
       </NuspecProperties>
     </PropertyGroup>
   </Target>
