React to pipes in corefx (#2337)

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -17,5 +17,7 @@
     <PublicSign Condition="'$(OS)' != 'Windows_NT'">true</PublicSign>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <LangVersion>latest</LangVersion>
+    <!-- https://github.com/aspnet/KestrelHttpServer/issues/2350 -->
+    <EnableApiCheck>false</EnableApiCheck>
   </PropertyGroup>
 </Project>
