--- a/test/AuthSamples.FunctionalTests/AuthSamples.FunctionalTests.csproj
+++ b/test/AuthSamples.FunctionalTests/AuthSamples.FunctionalTests.csproj
@@ -16,7 +16,7 @@
     <ProjectReference Include="..\..\samples\ClaimsTransformation\ClaimsTransformation.csproj" />
     <ProjectReference Include="..\..\samples\DynamicSchemes\DynamicSchemes.csproj" />
     <ProjectReference Include="..\..\samples\Identity.ExternalClaims\Identity.ExternalClaims.csproj" />
-    <ProjectReference Include="..\..\samples\VirtualSchemes.PathSchemeSelection\VirtualSchemes.PathSchemeSelection.csproj" />
+    <ProjectReference Include="..\..\samples\PathSchemeSelection\PathSchemeSelection.csproj" />
 
     <PackageReference Include="Microsoft.AspNetCore" Version="$(MicrosoftAspNetCorePackageVersion)" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="$(MicrosoftAspNetCoreHostingPackageVersion)" />
