Convert TestHost ResponseStream to use Pipes.

--- a/src/Microsoft.AspNetCore.TestHost/Microsoft.AspNetCore.TestHost.csproj
+++ b/src/Microsoft.AspNetCore.TestHost/Microsoft.AspNetCore.TestHost.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Microsoft.AspNetCore.Hosting\Microsoft.AspNetCore.Hosting.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IO.Pipelines" Version="$(SystemIOPipelinesPackageVersion)" />
+  </ItemGroup>
+
 </Project>
