--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -16,6 +16,8 @@
     <SignAssembly>true</SignAssembly>
     <PublicSign Condition="'$(OS)' != 'Windows_NT'">true</PublicSign>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <!-- https://github.com/aspnet/BuildTools/issues/592 -->
+    <EnableApiCheck>false</EnableApiCheck>
   </PropertyGroup>
 
 </Project>
