Adds websocket feature detection, test cleanup. (#624)

--- a/src/RequestHandler/RequestHandler.vcxproj
+++ b/src/RequestHandler/RequestHandler.vcxproj
@@ -208,6 +208,7 @@
   <ItemGroup>
     <ClInclude Include="aspnetcore_event.h" />
     <ClInclude Include="disconnectcontext.h" />
+    <ClInclude Include="environmentvariablehelpers.h" />
     <ClInclude Include="sttimer.h" />
     <ClInclude Include="outofprocess\forwarderconnection.h" />
     <ClInclude Include="outofprocess\processmanager.h" />
