--- a/test/IISIntegration.FunctionalTests/AppHostConfig/WebsocketsNotSupported.config
+++ b/test/IISIntegration.FunctionalTests/AppHostConfig/WebsocketsNotSupported.config
@@ -212,9 +212,9 @@
         -->
         <globalModules>
             <add name="UriCacheModule" image="%IIS_BIN%\cachuri.dll" />
-<!--            <add name="FileCacheModule" image="%IIS_BIN%\cachfile.dll" />  -->
+            <!--            <add name="FileCacheModule" image="%IIS_BIN%\cachfile.dll" />  -->
             <add name="TokenCacheModule" image="%IIS_BIN%\cachtokn.dll" />
-<!--            <add name="HttpCacheModule" image="%IIS_BIN%\cachhttp.dll" /> -->
+            <!--            <add name="HttpCacheModule" image="%IIS_BIN%\cachhttp.dll" /> -->
             <add name="DynamicCompressionModule" image="%IIS_BIN%\compdyn.dll" />
             <add name="StaticCompressionModule" image="%IIS_BIN%\compstat.dll" />
             <add name="DefaultDocumentModule" image="%IIS_BIN%\defdoc.dll" />
@@ -228,7 +228,7 @@
             <add name="UrlAuthorizationModule" image="%IIS_BIN%\urlauthz.dll" />
             <add name="BasicAuthenticationModule" image="%IIS_BIN%\authbas.dll" />
             <add name="WindowsAuthenticationModule" image="%IIS_BIN%\authsspi.dll" />
-<!--            <add name="DigestAuthenticationModule" image="%IIS_BIN%\authmd5.dll" /> -->
+            <!--            <add name="DigestAuthenticationModule" image="%IIS_BIN%\authmd5.dll" /> -->
             <add name="IISCertificateMappingAuthenticationModule" image="%IIS_BIN%\authmap.dll" />
             <add name="IpRestrictionModule" image="%IIS_BIN%\iprestr.dll" />
             <add name="DynamicIpRestrictionModule" image="%IIS_BIN%\diprestr.dll" />
@@ -236,14 +236,14 @@
             <add name="CustomLoggingModule" image="%IIS_BIN%\logcust.dll" />
             <add name="CustomErrorModule" image="%IIS_BIN%\custerr.dll" />
             <add name="HttpLoggingModule" image="%IIS_BIN%\loghttp.dll" />
-<!--            <add name="TracingModule" image="%IIS_BIN%\iisetw.dll" /> -->
+            <!--            <add name="TracingModule" image="%IIS_BIN%\iisetw.dll" /> -->
             <add name="FailedRequestsTracingModule" image="%IIS_BIN%\iisfreb.dll" />
             <add name="RequestMonitorModule" image="%IIS_BIN%\iisreqs.dll" />
             <add name="IsapiModule" image="%IIS_BIN%\isapi.dll" />
             <add name="IsapiFilterModule" image="%IIS_BIN%\filter.dll" />
             <add name="CgiModule" image="%IIS_BIN%\cgi.dll" />
             <add name="FastCgiModule" image="%IIS_BIN%\iisfcgi.dll" />
-<!--            <add name="WebDAVModule" image="%IIS_BIN%\webdav.dll" /> -->
+            <!--            <add name="WebDAVModule" image="%IIS_BIN%\webdav.dll" /> -->
             <add name="RewriteModule" image="%IIS_BIN%\rewrite.dll" />
             <add name="ConfigurationValidationModule" image="%IIS_BIN%\validcfg.dll" />
             <add name="ApplicationInitializationModule" image="%IIS_BIN%\warmup.dll" />
@@ -799,7 +799,7 @@
 
         <tracing>
 
-             <traceProviderDefinitions>
+            <traceProviderDefinitions>
                 <add name="WWW Server" guid="{3a2a4e84-4c21-4981-ae10-3fda0d9b0f83}">
                     <areas>
                         <clear />
@@ -870,7 +870,7 @@
             <authoringRules />
         </webdav>
         <applicationInitialization />
-        <webSocket />
+        <webSocket enabled="false" />
 
     </system.webServer>
     <location path="" overrideMode="Allow">
