Fix issues with RazorCompileOnBuild=true being default

--- a/test/WebSites/RazorBuildWebSite/RazorBuildWebSite.csproj
+++ b/test/WebSites/RazorBuildWebSite/RazorBuildWebSite.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>$(StandardTestWebsiteTfms)</TargetFrameworks>
     <DefineConstants>$(DefineConstants)</DefineConstants>
+    <RazorCompileOnBuild>false</RazorCompileOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
