--- a/test/WebSites/TagHelpersWebSite/TagHelpersWebSite.csproj
+++ b/test/WebSites/TagHelpersWebSite/TagHelpersWebSite.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>$(StandardTestWebsiteTfms)</TargetFrameworks>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <RazorCompileOnBuild>false</RazorCompileOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
