--- a/client-ts/signalr-protocol-msgpack/spec/tsconfig.json
+++ b/client-ts/signalr-protocol-msgpack/spec/tsconfig.json
@@ -8,7 +8,7 @@
         "lib": [ "es2015", "dom" ],
         "baseUrl": ".",
         "paths": {
-            "@aspnet/signalr": [ "../../signalr/src/index" ]
+            "@aspnet/*": [ "../../*" ]
         }
     },
     "include": [
