Add support for unit testing from console (#665)

--- a/test/AspNetCoreModuleTests/AspNetCoreModuleTests.vcxproj
+++ b/test/AspNetCoreModuleTests/AspNetCoreModuleTests.vcxproj
@@ -176,6 +176,7 @@
       <Project>{4787a64f-9a3e-4867-a55a-70cb4b2b2ffe}</Project>
     </ProjectReference>
   </ItemGroup>
+  <Import Project=".\NativeTests.targets" />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
